# nes

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  main.cpp
agent/: agent_interface.cpp  agent_interface.hpp  agent_interface.proto  agent_interface.py
config/: BUILD.bazel  constants.hpp  flags.hpp
io/: BUILD.bazel  cartridge.cpp  cartridge.hpp  cartridge_interface.cpp  cartridge_interface.hpp  display.cpp  display.hpp  files.cpp  files.hpp  headless_display.cpp  joypads.cpp  joypads.hpp  macos_display.cpp  prompt.cpp  prompt.hpp
lib/: BUILD.bazel  utils.cpp  utils.hpp
linux/nes_qt/: CMakeLists.txt  Main.qml  main.cpp  menu_handler.cpp  menu_handler.hpp  view_update_relay.hpp
macos/VirtualNes/VirtualNes/: AppDelegate.h  AppDelegate.m  GameScene.h  GameScene.mm  ViewController.h  ViewController.m  main.m
macos/VirtualNes/VirtualNes.xcodeproj/: project.pbxproj
macos/VirtualNes/VirtualNes.xcodeproj/project.xcworkspace/xcuserdata/jesse.xcuserdatad/: UserInterfaceState.xcuserstate
macos/VirtualNes/VirtualNes.xcodeproj/xcshareddata/xcschemes/: VirtualNes.xcscheme
macos/VirtualNes/VirtualNes.xcodeproj/xcuserdata/jesse.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
macos/VirtualNes/VirtualNes.xcodeproj/xcuserdata/jesse.xcuserdatad/xcschemes/: xcschememanagement.plist
macos/VirtualNes/VirtualNes/Base.lproj/: Main.storyboard
platform/: CMakeLists.txt  audio_output.cpp  audio_output.hpp  audio_player.cpp  audio_player.hpp  audio_types.hpp  controls.qml  main.cpp  main.qml  memory.qml  menu_handler.cpp  menu_handler.hpp  registers.qml  sprites.qml  sprites_model.cpp  sprites_model.hpp  text_controller.hpp  ui_context.cpp  ui_context.hpp  ui_controller.hpp  ui_properties.cpp  ui_properties.hpp  ui_window.hpp
processor/: BUILD.bazel  address_bus.cpp  address_bus.hpp  instructions.cpp  instructions.hpp  memory.hpp  nes_apu.cpp  nes_apu.hpp  nes_ppu.cpp  nes_ppu.hpp  ppu_address_bus.hpp  processor_6502.cpp  processor_6502.hpp  utils.cpp  utils.hpp  video_memory.hpp
roms/: nes-tutorial.nes  nes_game_notes.txt
scripts/: audio_gen.py  pc_context_viewer.py  plot_audio_samples.py
system/: BUILD.bazel  callbacks.hpp  nes.cpp  nes.hpp
test/: 6502_tests.cpp  6502_tests.hpp  BUILD.bazel  add.asm  file_tests.cpp  instruction_tests.cpp  processor_tests.cpp  timing.rom
