cc_library(
    name = "prompt",
    srcs = [
        "prompt.cpp"
    ],
    hdrs = [
        "prompt.hpp"
    ],
    deps = [
        "//processor:6502",
        "//system:nes",
        "@com_github_google_glog//:glog",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "files",
    srcs = [
        "cartridge_interface.cpp",
        "files.cpp"
    ],
    hdrs = [
        "cartridge_interface.hpp",
        "files.hpp"
    ],
    deps = [
        "//processor:6502",
        "@com_github_google_glog//:glog",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "display",
    srcs = [
        "display.cpp",
    ],
    hdrs = [
        "display.hpp",
    ],
    deps = [
        "//config:flags",
        "@com_github_google_glog//:glog",
        "@system_libs//:x11",
    ],
    visibility = ["//visibility:public"],
)

# TODO propagate build settings to c++ flags so the display class can just be compiled out rather
# than making this stubs library. 
cc_library(
    name = "headless_display",
    srcs = [
        "headless_display.cpp",
    ],
    hdrs = [
        "display.hpp",
    ],
    deps = [
        "//config:flags",
        "@com_github_google_glog//:glog",
    ],
    visibility = ["//visibility:public"],
)
