cc_library(
    name = "6502",
    srcs = [
        "instructions.cpp",
        "nes_ppu.cpp",
        "processor_6502.cpp",
        "utils.cpp"
    ],
    hdrs = [
        "instructions.hpp",
        "memory.hpp",
        "nes_ppu.hpp",
        "processor_6502.hpp",
        "utils.hpp",
        "video_memory.hpp"
    ],
    deps = [
        "@com_github_google_glog//:glog",
    ] + select({
        "//system:on_x11": ["//io:display"],
        "//conditions:default": ["//io:headless_display"],
    }),
    visibility = ["//visibility:public"],
)
