load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

bool_flag(
    name = "x11",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)
# --//:x11

config_setting(
    name = "on_x11",
    flag_values = {
        "//system:x11": "true",
    },
)

cc_library(
    name = "nes",
    srcs = [
        "nes.cpp",
    ],
    hdrs = [
        "nes.hpp",
    ],
    deps = [
        "//io:files",
        "//processor:6502",
        "@com_github_google_glog//:glog",
    ] + select({
        "//system:on_x11": ["//io:display"],
        "//conditions:default": ["//io:headless_display"],
    }),

    visibility = ["//visibility:public"],
)
