cc_binary(
    name = "file_tests",
    srcs = [
        "file_tests.cpp",
    ],
    deps = [
        "//io:files",
        "//processor:6502",
        "@com_github_google_glog//:glog",
    ],
    data = ["//test:nes-tutorial.nes"],
)

cc_binary(
    name = "instruction_tests",
    srcs = [
        "instruction_tests.cpp",
    ],
    deps = [
        "//io:files",
        "//processor:6502",
        "@com_github_google_glog//:glog",
    ],
    data = ["//test:nes-tutorial.nes"],
)

cc_binary(
    name = "processor_tests",
    srcs = [
        "processor_tests.cpp",
    ],
    deps = [
        "//io:files",
        "//processor:6502",
        "@com_github_google_glog//:glog",
    ],
    data = ["//test:timing.rom"],
)

cc_binary(
    name = "6502_tests",
    srcs = [
        "6502_tests.cpp",
    ],
    deps = [
        "//lib:json",
        "//processor:6502",
        "@com_github_google_glog//:glog",
    ]
)
